// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render WeatherCard with cloud condition 1`] = `
<div
  className="weather-card__container"
>
  <div
    className="weather-card__icon"
  >
    <img
      src="test-file-stub"
    />
  </div>
  <div
    className="weather-card__text-container"
  >
    <span
      className="weather-card__title"
    >
      Average weather on 
      <b>
        01 June 2019
      </b>
    </span>
    <div>
      <div
        className="weather-card__temperature"
      >
        15
        °...
        23
        °
      </div>
      <div
        className="weather-card__condition"
      >
        Mostly cloudy
      </div>
    </div>
  </div>
</div>
`;

exports[`should render WeatherCard with rain condition 1`] = `
<div
  className="weather-card__container"
>
  <div
    className="weather-card__icon"
  >
    <img
      src="test-file-stub"
    />
  </div>
  <div
    className="weather-card__text-container"
  >
    <span
      className="weather-card__title"
    >
      Average weather on 
      <b>
        01 June 2019
      </b>
    </span>
    <div>
      <div
        className="weather-card__temperature"
      >
        15
        °...
        23
        °
      </div>
      <div
        className="weather-card__condition"
      >
        Mostly rainy
      </div>
    </div>
  </div>
</div>
`;

exports[`should render WeatherCard with sun condition 1`] = `
<div
  className="weather-card__container"
>
  <div
    className="weather-card__icon"
  >
    <img
      src="test-file-stub"
    />
  </div>
  <div
    className="weather-card__text-container"
  >
    <span
      className="weather-card__title"
    >
      Average weather on 
      <b>
        01 June 2019
      </b>
    </span>
    <div>
      <div
        className="weather-card__temperature"
      >
        15
        °...
        23
        °
      </div>
      <div
        className="weather-card__condition"
      >
        Mostly sunny
      </div>
    </div>
  </div>
</div>
`;

exports[`should render WeatherCard with sun-cloud condition 1`] = `
<div
  className="weather-card__container"
>
  <div
    className="weather-card__icon"
  >
    <img
      src="test-file-stub"
    />
  </div>
  <div
    className="weather-card__text-container"
  >
    <span
      className="weather-card__title"
    >
      Average weather on 
      <b>
        01 June 2019
      </b>
    </span>
    <div>
      <div
        className="weather-card__temperature"
      >
        15
        °...
        23
        °
      </div>
      <div
        className="weather-card__condition"
      >
        Sun with clouds
      </div>
    </div>
  </div>
</div>
`;
